--- a/web_project_3/index.html
+++ b/web_project_3/index.html
@@ -34,10 +34,10 @@
                 to help eradicate polio in Africa, and even stopping by famous author Stephen King's house to say hi and
                 asking him to sign your favorite book.</p>
             <ul class="intro__list">
-                <li class="intro__list-text"><span class="intro__list-text_bold">Distance (miles)</span> 3,644</li>
-                <li class="intro__list-text"><span class="intro__list-text_bold">Travel time (days)</span> 22</li>
-                <li class="intro__list-text"><span class="intro__list-text_bold">Highest point (feet)</span> 9,613</li>
-                <li class="intro__list-text"><span class="intro__list-text_bold">Lowest point (feet)</span> -3</li>
+                <li class="intro__list-text"><span class="intro__text_bold">Distance (miles)</span> 3,644</li>
+                <li class="intro__list-text"><span class="intro__text_bold">Travel time (days)</span> 22</li>
+                <li class="intro__list-text"><span class="intro__text_bold">Highest point (feet)</span> 9,613</li>
+                <li class="intro__list-text"><span class="intro__text_bold">Lowest point (feet)</span> -3</li>
             </ul>
         </section>
         <div class="photo-grid">
