--- a/web_project_3/index.html
+++ b/web_project_3/index.html
@@ -13,8 +13,8 @@
         <header class="header">
             <img class="logo" src="images/logo.svg" alt="logo image">
             <nav class="header__links-container">
-                <a href="#" class="link header__lang-link header__lang-link_active">En</a>
-                <a href="#" class="link header__lang-link">Es</a>
+                <a href="#" class="link header__lang-link header__lang-link_active"  target=“_blank”>En</a>
+                <a href="#" class="link header__lang-link"  target=“#”>Es</a>
             </nav>
         </header>
         <section class="lead">
