--- a/web_project_3/index.html
+++ b/web_project_3/index.html
@@ -13,7 +13,7 @@
         <header class="header">
             <img class="logo" src="images/logo.svg" alt="logo image">
             <nav class="header__links-container">
-                <a href="#" class="link header__lang-link header__lang-link_active"  target=“_blank”>En</a>
+                <a href="#" class="link header__lang-link header__lang-link_active"  target=“#”>En</a>
                 <a href="#" class="link header__lang-link"  target=“#”>Es</a>
             </nav>
         </header>
@@ -59,7 +59,7 @@
                 <h3 class="place__title">Maine</h3>
                 <div class="place__website">
                     <p class="place__url-heading">URL</p>
-                    <a href="https://global.llbean.com/shop/L.L.Bean-Continental-Rucksack/122952.html?bc=50-816&csp=f&feat=816-GN1"
+                    <a href="https://global.llbean.com/shop/L.L.Bean-Continental-Rucksack/122952.html?bc=50-816&csp=f&feat=816-GN1" target=“#”
                         class="link place__link">global.llbean.com</a>
                 </div>
                 <img class="place__image" src="images/place-maine.jpg" alt="Photo of Maine">
@@ -80,7 +80,7 @@
                 <h3 class="place__title">New Hampshire</h3>
                 <div class="place__website">
                     <p class="place__url-heading">URL</p>
-                    <a href="https://www.timberland.com/timberlandpro.html" class="link place__link">timberland.com</a>
+                    <a href="https://www.timberland.com/timberlandpro.html" target=“#” class="link place__link">timberland.com</a>
                 </div>
                 <img class="place__image" src="images/place-new-hampshire.jpg" alt="Photo of New Hampshire">
                 <div class="place__paragraph">
@@ -104,7 +104,7 @@
                 <h3 class="place__title">New York</h3>
                 <div class="place__website">
                     <p class="place__url-heading">URL</p>
-                    <a href="https://www.ge.com/about-us" class="link place__link">ge.com</a>
+                    <a href="https://www.ge.com/about-us" target=“#” class="link place__link">ge.com</a>
                 </div>
                 <img class="place__image" src="images/place-new-york.jpg" alt="Photo of New York">
                 <div class="place__paragraph">
@@ -123,7 +123,7 @@
                 <h3 class="place__title">Erie, PA</h3>
                 <div class="place__website">
                     <p class="place__url-heading">URL</p>
-                    <a href="https://www.fws.gov/refuge/erie" class="link place__link">fws.gov</a>
+                    <a href="https://www.fws.gov/refuge/erie" target=“#” class="link place__link">fws.gov</a>
                 </div>
                 <img class="place__image" src="images/place-pennsylvania.jpg" alt="Photo of Erie, PA">
                 <div class="place__paragraph">
@@ -151,7 +151,7 @@
                 <h3 class="place__title">Ohio</h3>
                 <div class="place__website">
                     <p class="place__url-heading">URL</p>
-                    <a href="https://www.cedarpoint.com" class="link place__link">cedarpoint.com</a>
+                    <a href="https://www.cedarpoint.com" target=“#” class="link place__link">cedarpoint.com</a>
                 </div>
                 <img class="place__image" src="images/place-ohio.jpg" alt="Photo of Ohio">
                 <div class="place__paragraph">
@@ -175,16 +175,16 @@
         <div class="cover">
             <div class="cover__overlay">
                 <img src="images/cover-route-66.jpg" alt="Route 66" class="cover__background">
-                <a href="https://www.nps.gov/nr/travel/route66/maps66.html" class="cover__title">Historic Route 66</a>
+                <a href="https://www.nps.gov/nr/travel/route66/maps66.html" target=“#” class="cover__title">Historic Route 66</a>
                 <p class="cover__subtitle">The Main Street of America</p>
                 <p class="cover__subtitle">from Santa Monica, Cal. to Chicago, Ill.</p>
             </div>
         </div>
         <footer class="footer">
             <nav class="footer__links-container">
-                <a href="https://yandex.com/maps" class="link footer__link">Maps</a>
-                <a href="https://yandex.com/weather/moscow" class="link footer__link">Weather</a>
-                <a href="https://calendar.yandex.ru" class="link footer__link">Calendar</a>
+                <a href="https://yandex.com/maps" target=“#” class="link footer__link">Maps</a>
+                <a href="https://yandex.com/weather/moscow" target=“#” class="link footer__link">Weather</a>
+                <a href="https://calendar.yandex.ru" target=“#” class="link footer__link">Calendar</a>
             </nav>
             <p class="footer__copyright">&copy; 2020. Joe Recchia</p>
         </footer>
