--- a/web_project_3/index.html
+++ b/web_project_3/index.html
@@ -123,7 +123,7 @@
                 <h3 class="place__title">Erie, PA</h3>
                 <div class="place__website">
                     <p class="place__url-heading">URL</p>
-                    <a href="https://www.fws.gov/refuge/erie" target=“/” class="link place__link">fws.gov</a>
+                    <a href="https://www.fws.gov/refuge/erie" target=“#” class="link place__link">fws.gov</a>
                 </div>
                 <img class="place__image" src="images/place-pennsylvania.jpg" alt="Photo of Erie, PA">
                 <div class="place__paragraph">
