Quotation mark fix

--- a/web_project_3/index.html
+++ b/web_project_3/index.html
@@ -13,8 +13,8 @@
         <header class="header">
             <img class="logo" src="images/logo.svg" alt="logo image">
             <nav class="header__links-container">
-                <a href="#" class="link header__lang-link header__lang-link_active"  target=“#”>En</a>
-                <a href="#" class="link header__lang-link"  target=“#”>Es</a>
+                <a href="#" class="link header__lang-link header__lang-link_active" target="#">En</a>
+                <a href="#" class="link header__lang-link" target="#">Es</a>
             </nav>
         </header>
         <section class="lead">
@@ -59,7 +59,7 @@
                 <h3 class="place__title">Maine</h3>
                 <div class="place__website">
                     <p class="place__url-heading">URL</p>
-                    <a href="https://global.llbean.com/shop/L.L.Bean-Continental-Rucksack/122952.html?bc=50-816&csp=f&feat=816-GN1" target=“#”
+                    <a href="https://global.llbean.com/shop/L.L.Bean-Continental-Rucksack/122952.html?bc=50-816&csp=f&feat=816-GN1" target="#"
                         class="link place__link">global.llbean.com</a>
                 </div>
                 <img class="place__image" src="images/place-maine.jpg" alt="Photo of Maine">
@@ -80,7 +80,7 @@
                 <h3 class="place__title">New Hampshire</h3>
                 <div class="place__website">
                     <p class="place__url-heading">URL</p>
-                    <a href="https://www.timberland.com/timberlandpro.html" target=“#” class="link place__link">timberland.com</a>
+                    <a href="https://www.timberland.com/timberlandpro.html" target="#" class="link place__link">timberland.com</a>
                 </div>
                 <img class="place__image" src="images/place-new-hampshire.jpg" alt="Photo of New Hampshire">
                 <div class="place__paragraph">
@@ -104,14 +104,14 @@
                 <h3 class="place__title">New York</h3>
                 <div class="place__website">
                     <p class="place__url-heading">URL</p>
-                    <a href="https://www.ge.com/about-us" target=“#” class="link place__link">ge.com</a>
+                    <a href="https://www.ge.com/about-us" target="#" class="link place__link">ge.com</a>
                 </div>
                 <img class="place__image" src="images/place-new-york.jpg" alt="Photo of New York">
                 <div class="place__paragraph">
-                    <p class="place__text">Not only famous for “The Big Apple,” the state of NY also has several other
-                        reasons for going down in history. Since the late 1800s Schenectady, “The City that Lights and
+                    <p class="place__text">Not only famous for "The Big Apple," the state of NY also has several other
+                        reasons for going down in history. Since the late 1800s Schenectady, "The City that Lights and
                         Hauls
-                        the World,” has been home to the world-famous General Electric Company.</p>
+                        the World," has been home to the world-famous General Electric Company.</p>
                     <p class="place__text">This is where modern power generators were born as well as contemporary means
                         of
                         transmitting energy. So we figured this would be the perfect place to find a batteryless dynamo
@@ -123,11 +123,11 @@
                 <h3 class="place__title">Erie, PA</h3>
                 <div class="place__website">
                     <p class="place__url-heading">URL</p>
-                    <a href="https://www.fws.gov/refuge/erie" target=“#” class="link place__link">fws.gov</a>
+                    <a href="https://www.fws.gov/refuge/erie" target="#" class="link place__link">fws.gov</a>
                 </div>
                 <img class="place__image" src="images/place-pennsylvania.jpg" alt="Photo of Erie, PA">
                 <div class="place__paragraph">
-                    <p class="place__text">Erie, Pennsylvania, not to be confused with the word “eerie,” although it can
+                    <p class="place__text">Erie, Pennsylvania, not to be confused with the word "eerie," although it can
                         be
                         from time to time, is another town worth passing through for several different reasons. While it
                         might be most famously known as the scene of the Gettysburg address delivered by Mr. Lincoln
@@ -151,7 +151,7 @@
                 <h3 class="place__title">Ohio</h3>
                 <div class="place__website">
                     <p class="place__url-heading">URL</p>
-                    <a href="https://www.cedarpoint.com" target=“#” class="link place__link">cedarpoint.com</a>
+                    <a href="https://www.cedarpoint.com" target="#" class="link place__link">cedarpoint.com</a>
                 </div>
                 <img class="place__image" src="images/place-ohio.jpg" alt="Photo of Ohio">
                 <div class="place__paragraph">
@@ -175,16 +175,16 @@
         <div class="cover">
             <div class="cover__overlay">
                 <img src="images/cover-route-66.jpg" alt="Route 66" class="cover__background">
-                <a href="https://www.nps.gov/nr/travel/route66/maps66.html" target=“#” class="cover__title">Historic Route 66</a>
+                <a href="https://www.nps.gov/nr/travel/route66/maps66.html" target="#" class="cover__title">Historic Route 66</a>
                 <p class="cover__subtitle">The Main Street of America</p>
                 <p class="cover__subtitle">from Santa Monica, Cal. to Chicago, Ill.</p>
             </div>
         </div>
         <footer class="footer">
             <nav class="footer__links-container">
-                <a href="https://yandex.com/maps" target=“#” class="link footer__link">Maps</a>
-                <a href="https://yandex.com/weather/moscow" target=“#” class="link footer__link">Weather</a>
-                <a href="https://calendar.yandex.ru" target=“#” class="link footer__link">Calendar</a>
+                <a href="https://yandex.com/maps" target="#" class="link footer__link">Maps</a>
+                <a href="https://yandex.com/weather/moscow" target="#" class="link footer__link">Weather</a>
+                <a href="https://calendar.yandex.ru" target="#" class="link footer__link">Calendar</a>
             </nav>
             <p class="footer__copyright">&copy; 2020. Joe Recchia</p>
         </footer>
