Second Review changes so far

--- a/web_project_3/index.html
+++ b/web_project_3/index.html
@@ -204,10 +204,12 @@
             </section>
             <div class="cover">
                 <a href="https://www.nps.gov/nr/travel/route66/maps66.html" target="_blank" class="cover__link">
-                    <div class="cover__overlay">
-                        <img src="images/cover-route-66.jpg" alt="Route 66" class="cover__background">
-                        <h2 class="cover__title link">Historic Route 66</h2>
-                        <p class="cover__subtitle link">The Main Street of America from Santa Monica, Cal. to Chicago,
+                    <div class="cover__container">
+                        <div class="cover__overlay">
+                            <div class="cover__background"></div>
+                        </div>
+                        <h2 class="cover__title">Historic Route 66</h2>
+                        <p class="cover__subtitle">The Main Street of America from Santa Monica, Cal. to Chicago,
                             Ill.</p>
                     </div>
                 </a>
